# rust-gmsm

./: Cargo.toml  README.md
src/: lib.rs  sm2.rs  sm3.rs  sm4.rs
src/g2/: p256.rs  subject.rs
src/g3/: digest.rs  hash.rs
src/g4/: cipher.rs
src/utils/: slice.rs
tests/: test_sm3.rs
