[package]
name = "gmsm"
version = "0.1.0"
edition = "2018"
authors = ["nfjbill <nfjbill@qq.com>"]
description = "A Rust Library of China's Standards of Encryption Algorithms (SM2/3/4)"
keywords = ["cipher", "cryptography"]
license = "Apache-2.0"
repository = "https://github.com/nfjBill/rust-gmsm"
readme = "README.md"

[features]
default = ["std"]
alloc = []
std = []
internal_benches = []

[dependencies]
panic-halt = "0.2"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
num-bigint-dig = { version = "0.7.0", default-features = false }
num = { version = "0.4", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
rand = { version = "0", default-features = false }
spin = "0.9"
oorandom = { version = "11", default-features = false }
